<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/noteHolder"
    android:layout_width="match_parent"
    android:layout_height="110px"
    android:layout_marginStart="8px"
    android:layout_marginTop="8px"
    android:layout_marginEnd="12px"

    android:background="@drawable/noteselector"

    android:orientation="horizontal"
    app:layout_constrainedWidth="false"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <TextView
        android:id="@+id/dayText"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:text="DAY"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="1"
        android:textSize="40dp"
        android:textStyle="bold"
        android:fontFamily="monospace"
        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="4dp"
        android:text="example"
        android:textAlignment="textStart"
        android:textSize="25dp" />


</LinearLayout>